--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Serv2" default="help">
+<project name="Kmeleon" default="help">
 
 <!-- The local.properties file is created and updated by the 'android'
      tool.
